// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components/analytics/line_chart.tsx should match snapshot, loaded with data 1`] = `
<div>
  <div
    class="col-sm-12"
  >
    <div
      class="total-count by-day"
    >
      <div
        class="title"
      >
        Test
      </div>
      <div
        class="content"
      >
        <canvas
          data-labels="test1,test2,test3"
          data-testid="test"
          height="0"
          style="display: block; box-sizing: border-box; height: 0px; width: 0px;"
          width="0"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`components/analytics/line_chart.tsx should match snapshot, loaded without data 1`] = `
<div>
  <div
    class="col-sm-12"
  >
    <div
      class="total-count by-day"
    >
      <div
        class="title"
      >
        Test
      </div>
      <div
        class="content"
      >
        <h5>
          Not enough data for a meaningful representation.
        </h5>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/analytics/line_chart.tsx should match snapshot, on loading 1`] = `
<div>
  <div
    class="col-sm-12"
  >
    <div
      class="total-count by-day"
    >
      <div
        class="title"
      >
        Test
      </div>
      <div
        class="content"
      >
        Loading...
      </div>
    </div>
  </div>
</div>
`;
